# FrameworksNative

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/bbt2000/anative/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/bbt2000/anative/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
nativesrc/: build.gradle
nativesrc/src/main/cpp/: CMakeLists.txt
nativesrc/src/main/cpp/libs/gui/: CMakeLists.txt
nativesrc/src/main/cpp/libs/nativedisplay/: CMakeLists.txt
nativesrc/src/main/cpp/libs/nativewindow/: CMakeLists.txt
nativesrc/src/main/cpp/opengl/: CMakeLists.txt
nativesrc/src/main/cpp/system/logging/logcat/: logcat.cpp
nativesrc/src/main/cpp/system/logging/logd/: LogKlog.cpp  main.cpp
nativesrc/src/main/cpp/system/logging/rust/: liblog_event_list.rs
nativesrc/src/main/java/com/bbt2000/nativesrc/: NativeLib.kt
